--- a/desktop.css
+++ b/desktop.css
@@ -60,6 +60,13 @@ li {
 .hidden-icon {
     visibility: hidden;
 }
-.menu-icon-mobile {
+.hamburger-menu-icon {
     visibility: hidden;
+}
+mobile-menu {
+    position: fixed;
+    top: 0rem;
+    right: -20rem;
+    height: 100%;
+    width: 10rem;
 }
