added slideshow style

--- a/desktop.css
+++ b/desktop.css
@@ -26,6 +26,26 @@ li {
     padding: 1rem;
 }
 
+/* SLIDESHOW */
+
+.slideshow-container {
+    position: relative;
+    width: 31rem;
+    height: auto;
+    margin-top: 2rem;
+}
+.slideshow-container > img {
+    position: absolute;
+    opacity: 0;
+    width: 30rem;
+    transition: opacity 2s;
+    border-radius: 5rem;
+    border: 0.5rem solid darkgreen; 
+}
+.show {
+    opacity: 1;
+}
+
 /* REUSABLE CLASSES */
 
 .flex {
