changed menu layout and added photos

--- a/desktop.css
+++ b/desktop.css
@@ -4,17 +4,28 @@
 }
 body {
     font-family: 'Lato', sans-serif;
+    height: 100vh;
 }
 h1, h2, h3, h4 {
     font-family: 'Fondamento';
 }
 
+h1 {
+    font-size: 5rem;
+}
+
+h4 {
+    font-size: 1.5rem;
+}
+
 header {
+    grid-area: header;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     height: 8rem;
+    align-items: center;
 }
 
 ul {
@@ -26,21 +37,45 @@ li {
     padding: 1rem;
 }
 
+.grid-container {
+    display: grid;
+    padding: 1rem;
+    height: 100%;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 8rem auto;
+    grid-template-areas: "header header"
+    "aside main"
+    "footer footer";
+}
+
+aside {
+    grid-area: aside;
+    display: flex;
+}
+
+.sidebar-menu {
+    height: 100%;
+}
+
+main {
+    grid-area: main;
+
+}
+
 /* SLIDESHOW */
 
 .slideshow-container {
     position: relative;
-    width: 31rem;
-    height: auto;
-    margin-top: 2rem;
+    width: 50%;
+    min-width: 20rem;
 }
-.slideshow-container > img {
+img {
     position: absolute;
     opacity: 0;
-    width: 30rem;
-    transition: opacity 2s;
-    border-radius: 5rem;
-    border: 0.5rem solid darkgreen; 
+    width: 100%;
+    transition: opacity 3s;
+    border-radius: 2rem;
+    margin: 1rem;
 }
 .show {
     opacity: 1;
@@ -64,9 +99,10 @@ li {
 .space-around {
     justify-content: space-around;
 }
-.border-bottom {
-    border-bottom: 0.1rem solid lightgrey;
+.align-center {
+    align-items: center;
 }
+
 
 /* SPECIFIC ELEMENT CLASSES */
 
@@ -81,7 +117,7 @@ li {
     visibility: hidden;
 }
 .hamburger-menu-icon {
-    visibility: hidden;
+    display: none;
 }
 .mobile-menu {
     position: fixed;
