--- a/desktop.css
+++ b/desktop.css
@@ -1,10 +1,10 @@
 * {
     box-sizing: border-box;
     margin: 0;
+   /* overflow: hidden; */
 }
 body {
     font-family: 'Lato', sans-serif;
-    height: 100vh;
 }
 h1, h2, h3, h4 {
     font-family: 'Fondamento';
@@ -22,7 +22,7 @@ header {
     grid-area: header;
     position: fixed;
     top: 0;
-    left: 8rem;
+    left: 0;
     right: 0;
     height: 8rem;
     align-items: center;
@@ -42,8 +42,8 @@ li {
     padding: 1rem;
     height: 100%;
     grid-template-columns: 8rem 1fr;
-    grid-template-rows: 8rem auto;
-    grid-template-areas: "aside header"
+    grid-template-rows: 8rem 10rem 2rem;
+    grid-template-areas: "header header"
     "aside main"
     "footer footer";
 }
@@ -52,7 +52,9 @@ aside {
     grid-area: aside;
     display: flex;
     width: 8rem;
+    height: 100%;
     position: fixed;
+    top: 8rem;
 }
 
 .sidebar-menu {
@@ -61,7 +63,12 @@ aside {
 
 main {
     grid-area: main;
+    top: 8rem;
+    height: 100%;
 
+}
+footer {
+    grid-area: footer;
 }
 
 /* SLIDESHOW */
@@ -92,7 +99,6 @@ img {
     flex-direction: column;
 }
 .center {
-    align-items: center;
     justify-content: center;
 }
 .space-between {
@@ -115,6 +121,9 @@ img {
 .menu {
     width: 100%;
 }
+.hidden-icons {
+    visibility: hidden;
+}
 .hidden-icon {
     display: none;
 }
@@ -127,4 +136,8 @@ img {
     right: -20rem;
     height: 100%;
     width: 10rem;
+}
+
+.icon {
+    padding: 1rem;
 }
